--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/HeaderWidget/HeaderWidget.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/HeaderWidget/HeaderWidget.cshtml
@@ -1,7 +1,6 @@
-﻿@using Sitecore.Web;
-@*@if (!string.IsNullOrEmpty(WebUtil.GetCookieValue("MemberInfo")))
-*@
-@if(Sitecore.Context.IsLoggedIn){
+﻿@using Feature.Wealth.Account.Helpers;
+@if (FcbMemberHelper.CheckMemberLogin())
+{
     Html.RenderPartial("~/Views/Feature/Wealth/Component/HeaderWidget/_LoginState.cshtml");
 }
 else
