--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailDomestic.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailDomestic.cshtml
@@ -2,6 +2,8 @@
 @using Feature.Wealth.Component.Models.FundDetail
 @using Foundation.Wealth.Helper;
 @using Foundation.Wealth.Extensions;
+@using Xcms.Sitecore.Foundation.Basic.Extensions;
+@using Feature.Wealth.Component.Models.Invest
 @{
     if (Model.FundBaseData == null)
     {
@@ -133,21 +135,21 @@
                     <div class="l-pageHeader__action u-hidden-embed">
                         <ul class="l-pageWallet">
                             <li class="l-pageWallet__item">
-                                <!-- [data-after-lt]: pad / mobile 自動顯示文字在後方，值為要顯示的文字 -->
-                                <!-- [data-ia="true"]: 啟用互動式按鈕，預設會有 tooltip 及 toast 提示訊息，需搭配 [data-msg] 設定訊息才會有作用 -->
-                                <!-- [data-msg]: active|inactive 的訊息，用 "|" 符號分隔，若訊息未設定完整則不顯示提示訊息 -->
-                                <a href="javascript;" id="focusBtn" class="o-statusBtn o-statusBtn--like" data-after="關注" data-msg="加入關注|取消關注" data-ia="true" data-add="false"></a>
+                                <a href="javascript:;" data-focus
+                                   data-type="@InvestTypeEnum.Fund" data-id="@BasicData.ProductCode" data-name="@BasicData.ProductName"
+                                   class="o-statusBtn o-statusBtn--like" data-eh="focus-init,focus-click"
+                                   data-after="關注" data-msg="加入關注|取消關注" data-ia="true" data-add="false"></a>
                             </li>
                             <li class="l-pageWallet__item">
-                                <!-- [data-after-lt]: pad / mobile 自動顯示文字在後方，值為要顯示的文字 -->
-                                <!-- [data-ia="true"]: 啟用互動式按鈕，預設會有 tooltip 及 toast 提示訊息，需搭配 [data-msg] 設定訊息才會有作用 -->
-                                <!-- [data-msg]: active|inactive 的訊息，用 "|" 符號分隔，若訊息未設定完整則不顯示提示訊息 -->
-                                <a href="javascript;" id="compareBtn" class="o-statusBtn o-statusBtn--compare " data-after="比較" data-msg="加入比較|取消比較" data-ia="true" data-add="false"></a>
+                                <a href="javascript;" data-compare
+                                   data-type="@InvestTypeEnum.Fund" data-id="@BasicData.ProductCode" data-name="@BasicData.ProductName"
+                                   data-eh="compare-init,compare-click" class="o-statusBtn o-statusBtn--compare "
+                                   data-after="比較" data-msg="加入比較|取消比較" data-ia="true" data-add="false"></a>
                             </li>
-                            @if (BasicData.OnlineSubscriptionAvailability == "Y")
+                            @if (BasicData.OnlineSubscriptionAvailability.ToBoolean())
                             {
                                 <li class="l-pageWallet__btn">
-                                    <a href="#" data-eh="subscription-init,subscription-click" eh-subscription-init class="o-fixedBtn" data-popup="true" data-fundid="@BasicData.ProductCode">申購</a>
+                                    @Html.Partial("~/Views/Project/Wealth/Partial/Subscription.cshtml", Tuple.Create(InvestTypeEnum.Fund, BasicData.ProductCode))
                                 </li>
                             }
                         </ul>
@@ -254,7 +256,7 @@
                                         }
                                         else
                                         {
-                                            for (int i = 0; i < 5 ; i++)
+                                            for (int i = 0; i < 5; i++)
                                             {
                                                 <div class="o-starLevel__item"></div>
                                             }
@@ -3464,7 +3466,7 @@
                             //const updateDate = data.body.updateDate.replaceAll('-', '/');
                             //// 資料日期
                             //$('[data-update-date="trend"]').text(updateDate);
-                          
+
                             let series = {
                                 name: text,
                                 data: mapData,
