--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/AwardFund/AwardFundReturnView.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/AwardFund/AwardFundReturnView.cshtml
@@ -36,7 +36,7 @@
                 <a href="#popupCurrency" class="o-icon o-icon--tip o-icon--xs" data-popup="true"></a>
             </div>
             <div class="c-cardTable__content">
-                <a href="#" class="o-link">@item.CurrencyName</a>
+                <a href="#popupCurrencyWebSite" class="o-link" data-popup="true">@item.CurrencyName</a>
             </div>
         </td>
         <td class="c-cardTable__body" data-card-table-width="1/2">
