--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/DiscountPremium/DiscountPremium.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/DiscountPremium/DiscountPremium.cshtml
@@ -84,7 +84,7 @@
 								<th>
 									<div class="c-table__title">
 										<span>折溢價(%)</span>
-										<a href="#" class="o-sorting is-desc" data-sorting-column="DiscountPremium"></a>
+										<a href="#" class="o-sorting" data-sorting-column="DiscountPremium"></a>
 									</div>
 								</th>
 								<th>
