--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/PerformanceETFRank/PerformanceEtfRank.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/PerformanceETFRank/PerformanceEtfRank.cshtml
@@ -101,7 +101,7 @@
 								<th>
 									<div class="c-table__title">
 										<span>6個月</span>
-										<a href="#" class="o-sorting is-desc" data-sorting-column="SixMonthReturnMarketPriceOriginalCurrency"></a>
+										<a href="#" class="o-sorting" data-sorting-column="SixMonthReturnMarketPriceOriginalCurrency"></a>
 									</div>
 								</th>
 								<th>
