--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/VolumeRank/VolumeRank.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/VolumeRank/VolumeRank.cshtml
@@ -90,7 +90,7 @@
 								<th>
 									<div class="c-table__title">
 										<span>最新量</span>
-										<a href="#" class="o-sorting is-desc" data-sorting-column="LatestVolumeTradingVolume"></a>
+										<a href="#" class="o-sorting" data-sorting-column="LatestVolumeTradingVolume"></a>
 									</div>
 								</th>
 								<th>
