--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/CostRank/CostRank.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/CostRank/CostRank.cshtml
@@ -107,7 +107,7 @@
 								<th>
 									<div class="c-table__title">
 										<span>管理費(%)</span>
-										<a href="#" class="o-sorting is-asc" data-sorting-column="TotalManagementFee"></a>
+										<a href="#" class="o-sorting" data-sorting-column="TotalManagementFee"></a>
 									</div>
 								</th>
 								<th>
