--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/NewArrivalETF/NewArrivalEtf.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/NewArrivalETF/NewArrivalEtf.cshtml
@@ -95,7 +95,7 @@
 								<th>
 									<div class="c-table__title">
 										<span>6個月</span>
-										<a href="#" class="o-sorting is-desc" data-sorting-column="SixMonthReturnMarketPriceOriginalCurrency"></a>
+										<a href="#" class="o-sorting" data-sorting-column="SixMonthReturnMarketPriceOriginalCurrency"></a>
 									</div>
 								</th>
 								<th>
